--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ rust-version = "1.57"
 exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
 
 [dependencies]
-tauri = { version = "1.0.2" }
+tauri = { version = "1.0.5" }
 serde = "1.0"
+serde_json = "1.0"
 thiserror = "1.0"
+umya-spreadsheet = "0.8.0"
